--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@ That’s iconic. The product is totally different and made history.</p>
     <footer>
        <div class="footer-section">
          <ul class="footer-list-1">
+           <li class="bold"><a href="#"><b>Agilers</b></a></li>
+           <li><a href="#">Home</a></li>
+           <li><a href="#about">About</a></li>
+           <li><a href="#stages">Stages</a></li>
+         </ul>
+         <ul class="footer-list-1">
            <li class="bold"><a href="#"><b>Team Members</b></a></li>
            <li><a href="#">Abhishek Purohit</a></li>
            <li><a href="#">Bhumi Batra</a></li>
